@startuml

title __SIMULATION's Class Diagram__\n

  package  {
    package Simulation {
      class SimulationController {
          + SimulationController()
          - initSimulation()
          + simulateNextStep()
          + getStats()
          + getBoard()
      }
    }
  }
  

  package  {
    package Simulation {
      class Statistics {
          ~ initialHunterCount : int
          ~ initialPreyCount : int
          ~ initialObstacleCount : int
          + Statistics()
          + getHunterCount()
          + getPreyCount()
          + getObstacleCount()
          + getHunterPreyRatio()
          + getInitialHunterCount()
          + getInitialPreyCount()
          + getAmtPreyDead()
          + getAmtHunterDead()
          + getAmtDeadCorpse()
          + getAvgHunterSpeed()
          + getAvgPreySpeed()
          + getAvgPreyKilledByHunter()
          + getAvgHunterKilledByPrey()
          + getAvgHunterStarved()
          + getAvgPreyStarved()
          + getAvgFoodGainPerIterationHunter()
          + getAvgFoodGainPerIterationPrey()
      }
    }
  }
  

  SimulationController o-- Board : board
  SimulationController o-- Statistics : stats
  Statistics o-- SimulationController : simulation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
